# pacgraph

./: Cargo.toml  README.md  deny.toml  justfile
src/: alpm.rs  args.rs  dependencies.rs  graph.rs  lib.rs  main.rs  print.rs
supply-chain/: audits.toml  config.toml
